[gd_scene load_steps=45 format=3 uid="uid://crxydjrkbrxsk"]

[ext_resource type="Script" path="res://character/playable.gd" id="1_q25qh"]
[ext_resource type="Texture2D" uid="uid://kjc8xupcdd0x" path="res://character/Human Male Model/Sections/HMM Idle Bare.png" id="2_nrwnw"]
[ext_resource type="Texture2D" uid="uid://hbvkppios5y7" path="res://character/Human Male Model/Sections/HMM Run Bare.png" id="3_ol6f2"]
[ext_resource type="Texture2D" uid="uid://8mjksyy2s7p0" path="res://character/Human Male Model/Sections/HMM Jump Bare.png" id="4_4183j"]
[ext_resource type="Texture2D" uid="uid://c5lpg1rg3by6t" path="res://character/Human Male Model/Sections/LEDGE.png" id="4_r1l2b"]
[ext_resource type="Texture2D" uid="uid://c0snitdwafb8y" path="res://character/Human Male Model/Sections/HMM Walk Bare.png" id="5_p8bdd"]
[ext_resource type="Script" path="res://audio_stream_player.gd" id="8_4cgmy"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="9_meuls"]
[ext_resource type="Script" path="res://pusher.gd" id="9_vicmv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5vb61"]
atlas = ExtResource("4_4183j")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpt5j"]
atlas = ExtResource("4_4183j")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewgo0"]
atlas = ExtResource("4_4183j")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61waj"]
atlas = ExtResource("2_nrwnw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdxh2"]
atlas = ExtResource("2_nrwnw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hckh5"]
atlas = ExtResource("4_4183j")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1j4s"]
atlas = ExtResource("4_4183j")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24nqg"]
atlas = ExtResource("4_4183j")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_652gu"]
atlas = ExtResource("4_4183j")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8knr"]
atlas = ExtResource("3_ol6f2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa8kd"]
atlas = ExtResource("3_ol6f2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vwts"]
atlas = ExtResource("3_ol6f2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hcjv"]
atlas = ExtResource("3_ol6f2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osc1d"]
atlas = ExtResource("3_ol6f2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic660"]
atlas = ExtResource("3_ol6f2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f6ty"]
atlas = ExtResource("4_4183j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpsun"]
atlas = ExtResource("4_4183j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_065f2"]
atlas = ExtResource("4_4183j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b4tb"]
atlas = ExtResource("4_4183j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swlhq"]
atlas = ExtResource("3_ol6f2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_immi2"]
atlas = ExtResource("3_ol6f2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqnd8"]
atlas = ExtResource("5_p8bdd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41rv8"]
atlas = ExtResource("5_p8bdd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_foajy"]
atlas = ExtResource("5_p8bdd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pfl1"]
atlas = ExtResource("5_p8bdd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxqmn"]
atlas = ExtResource("5_p8bdd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ic4"]
atlas = ExtResource("5_p8bdd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1gh1"]
atlas = ExtResource("5_p8bdd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmqpf"]
atlas = ExtResource("5_p8bdd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kldte"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vb61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpt5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewgo0")
}],
"loop": true,
"name": &"FALLING",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61waj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdxh2")
}],
"loop": true,
"name": &"IDLE",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hckh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1j4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24nqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_652gu")
}],
"loop": false,
"name": &"LANDING",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_r1l2b")
}],
"loop": false,
"name": &"LEDGE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8knr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa8kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vwts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hcjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osc1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic660")
}],
"loop": true,
"name": &"RUN",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f6ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpsun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_065f2")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_6b4tb")
}],
"loop": false,
"name": &"START_JUMP",
"speed": 10.0
}, {
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_swlhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_immi2")
}],
"loop": false,
"name": &"START_RUN",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41rv8")
}],
"loop": false,
"name": &"START_WALK",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_foajy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pfl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxqmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1gh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmqpf")
}],
"loop": true,
"name": &"WALK",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogvc3"]
radius = 4.46534
height = 19.5442

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_ucoag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nswjc"]
size = Vector2(11.91, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoujr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdckq"]
size = Vector2(16, 4)

[node name="player_char" type="CharacterBody2D" groups=["player"]]
position = Vector2(-0.0936432, -0.0936441)
collision_mask = 5
platform_on_leave = 2
platform_floor_layers = 4294967288
script = ExtResource("1_q25qh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -0.0625)
sprite_frames = SubResource("SpriteFrames_kldte")
animation = &"LEDGE"
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.0625, 4.75)
shape = SubResource("CapsuleShape2D_ogvc3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_ucoag")
script = ExtResource("8_4cgmy")

[node name="CollisionPhysics" type="Node2D" parent="."]
script = ExtResource("9_vicmv")

[node name="LedgeGrab" type="CollisionShape2D" parent="."]
position = Vector2(-0.0394453, -5.99282)
shape = SubResource("RectangleShape2D_nswjc")

[node name="WallCheck" type="ShapeCast2D" parent="."]
position = Vector2(-0.144752, -4.87944)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_aoujr")
target_position = Vector2(-0.00655772, 11.8982)
collision_mask = 4

[node name="FloorCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 19.708)
collision_mask = 5

[node name="TopCheck" type="ShapeCast2D" parent="."]
position = Vector2(-0.102322, -8.04155)
shape = SubResource("RectangleShape2D_bdckq")
target_position = Vector2(0, 0)
collision_mask = 5

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.7, 2.7)
limit_smoothed = true
drag_vertical_offset = -1.0

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("9_meuls")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
